2013-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Applied patch from Valentin Dudouyt to set default code loc.
	* src/stm8/gen.c:
	  STM8: Be more cautious about arithmetic on stack pointer.

2013-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/pic16/glue.c,
	  src/z80/main.c,
	  doc/sdccman.lyx,
	  src/stm8/main.c:
	  Remove option --main-return, make the behaviour previously invoked by --main-return the default.

2013-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8.h,
	  sdas/asstm8/stm8mch.c,
	  sdas/asstm8/stm8pst.c,
	  src/SDCCglue.c,
	  src/stm8/gen.c,
	  src/stm8/main.c:
	  STM8: Applied patches from Valentin Dudouyt containing various fixes.

2013-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc.c:
	  Fix handling of stack part of local variables.

2013-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement basic pointer writes, fix handling of 16-bit literals.

2013-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: END_FUNCTION stack adjustment fix, more efficient zeroing, addition fix, return value use.

2013-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix for GET_VALUE_AT_ADDRESS, fixes for shift by literal, implement call by pointer, minor improvements.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Allow more operands in xor, and, or.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement integer unary minus, or fix.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement more comparisons, stack handling fix.
	* src/SDCCsymt.c:
	  STM8: Allow returning long long (not implemented in code genration yet).

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: